--- a/blog/infra/k8s/posts-depl.yaml
+++ b/blog/infra/k8s/posts-depl.yaml
@@ -19,9 +19,23 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: posts-clusterip-srv
+  name: posts-srv
 spec:
   type: ClusterIP
+  selector:
+    app: posts
+  ports:
+    - name: posts
+      protocol: TCP
+      port: 4000
+      targetPort: 4000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: posts-nodeport-srv
+spec:
+  type: NodePort
   selector:
     app: posts
   ports:
