--- a/ticketing/expiration/package.json
+++ b/ticketing/expiration/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth",
+  "name": "expiration",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -19,24 +19,15 @@
   "license": "ISC",
   "dependencies": {
     "@drptickets/common": "^1.0.17",
-    "@types/cookie-session": "^2.0.44",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.7",
-    "cookie-session": "^2.0.0",
-    "express": "^4.17.2",
-    "express-async-errors": "^3.1.1",
-    "express-validator": "^6.14.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.6",
+    "@types/bull": "^3.15.9",
+    "bull": "^4.8.5",
+    "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
-    "@types/supertest": "^2.0.12",
     "jest": "^27.5.1",
-    "mongodb-memory-server": "^8.4.1",
-    "supertest": "^6.2.2",
     "ts-jest": "^27.1.4"
   }
 }
