--- a/ticketing/payments/package.json
+++ b/ticketing/payments/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth",
+  "name": "payments",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -28,6 +28,9 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
+    "mongoose-update-if-current": "^1.4.0",
+    "node-nats-streaming": "^0.3.2",
+    "stripe": "^10.2.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.5.4"
   },
