--- a/.github/workflows/tests-orders.yml
+++ b/.github/workflows/tests-orders.yml
@@ -2,7 +2,8 @@ name: tests-orders
 
 on:
   pull_request:
-    paths: -'ticketing/orders/**'
+    paths:
+      - "ticketing/orders/**"
 
 jobs:
   build:
